--- a/Authentication/templates/base.html
+++ b/Authentication/templates/base.html
@@ -1,3 +1,4 @@
+<!-- base.html -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,57 +6,54 @@
     {% load static %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="{% static '/assets/bootstrap/css/bootstrap.min.css'%}">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
-    <link rel="stylesheet" href="{% static '/assets/fonts/font-awesome.min.css' %}">
+    <title>{% block title %}NewsReach{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'assets/bootstrap/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i&amp;display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.css">
+    <link rel="stylesheet" href="{% static 'assets/css/styles.min.css' %}">
 </head>
 
 <body>
-
-    <!-- Use Bootstrap's navbar component -->
-    <nav class="navbar navbar-dark navbar-expand-md sticky-top py-3" id="mainNav">
+    <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
         <div class="container">
-            <a class="navbar-brand d-flex align-items-center" href="{% url 'home' %}">
-                <span
-                    class="bs-icon-sm bs-icon-circle bs-icon-primary shadow d-flex justify-content-center align-items-center me-2 bs-icon"><i
-                        class="fa fa-newspaper-o" style="font-size: 18px;"></i></span><span>SentiNews</span></a><button
-                data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span
-                    class="visually-hidden">Toggle
-                    navigation</span><span class="navbar-toggler-icon"></span></button>
+            <a class="navbar-brand logo" href="#">NewsReach</a>
+            <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1">
+                <span class="visually-hidden">Toggle navigation</span>
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navcol-1">
-                <ul class="navbar-nav mx-auto">
-                    <!-- Navbar Items here -->
+                <ul class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
-                    <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Options</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Articles</a></li>
                     {% endif %}
                 </ul>
-                {% if not user.is_authenticated %}
-                <a class="btn btn-primary shadow" role="button" href="{% url 'signup' %}">Sign up</a>
-                {% endif %}
-                {% if user.is_authenticated %}
-                <a class="btn btn-primary shadow" role="button" href="{% url 'logout' %}">Log Out</a>
-                {% endif %}
             </div>
+            {% if not user.is_authenticated %}
+            <a class="btn btn-primary shadow" role="button" href="{% url 'signup' %}">Register</a>
+            {% else %}
+            <a class="btn btn-primary shadow" role="button" href="{% url 'logout' %}">Log Out</a>
+            {% endif %}
         </div>
     </nav>
-    <!-- End of Bootstrap's navbar component -->
 
     <div class="container mt-4">
-        {% block content %}{% endblock %}
+        {% block content %}
+        {% endblock %}
     </div>
-    <footer class="bg-dark">
-        <div class="container py-4 py-lg-5">
-            <hr>
-            <div class="text-muted d-flex justify-content-between align-items-center pt-3">
-                <p class="mb-0">2023 University of the West of England - Samuel Teixeira Parchao&nbsp;</p>
-            </div>
+
+    <footer class="page-footer dark">
+        <div class="container">
+            <!-- Footer content -->
+        </div>
+        <div class="footer-copyright">
+            <p>© 2023 Copyright Text</p>
         </div>
     </footer>
-    <script src="{% static '/assets/bootstrap/js/bootstrap.min.js' %}"></script>
-    <script src="{% static '/assets/js/script.min.js'%}"></script>
+
+    <script src="{% static 'assets/bootstrap/js/bootstrap.min.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js"></script>
+    <script src="{% static 'assets/js/script.min.js' %}"></script>
 </body>
 
 </html>
