--- a/Authentication/templates/signup.html
+++ b/Authentication/templates/signup.html
@@ -1,46 +1,31 @@
 {% extends 'base.html' %}
 
 {% block content %}
-{% load static %}
-<section class="py-5">
-    <div class="container py-5">
-        <div class="row mb-4 mb-lg-5">
-            <div class="col-md-8 col-xl-6 text-center mx-auto">
-                <p class="fw-bold text-success mb-2">Sign up</p>
-                <h2 class="fw-bold">Welcome</h2>
+
+<main class="page registration-page">
+    <section class="clean-block clean-form dark">
+        <div class="container">
+            <div class="block-heading">
+                <h2 class="text-info">Registration</h2>
+                <p>Register below in order to see relevant news to you.</p>
             </div>
-        </div>
-        <div class="row d-flex justify-content-center">
-            <div class="col-md-6 col-xl-4">
-                <div class="card">
-                    <div class="card-body text-center d-flex flex-column align-items-center">
-                        <div class="bs-icon-xl bs-icon-circle bs-icon-primary shadow bs-icon my-4"><svg
-                                xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
-                                viewBox="0 0 16 16" class="bi bi-person">
-                                <path
-                                    d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z">
-                                </path>
-                            </svg></div>
-                        <form method="post">
-                            {% csrf_token %}
-                            <!-- Registration form components -->
-                            <div class="mb-3"><input class="form-control" type="text" name="username" id="username" placeholder="Username"> </div>
-                            <div class="mb-3"><input class="form-control" type="email" name="email" id="email" placeholder="Email"> </div>
-                            <div class="mb-3 form-group d-flex">
-                                <input class="form-control mr-3" style="margin-right: 10px" type="text" name="firstname" id="firstname" placeholder="First Name">
-                                <input class="form-control" type="text" name="surname" id="surname" placeholder="Surname">
-                            </div>                   
-                            <div class="mb-3"><input class="form-control" type="password" name="password1" id="password1" placeholder="Password" /> </div>
-                            <div class="mb-3"><input class="form-control" type="password" name="password2" id="password2" placeholder="Confirm Password" /> </div>
-                            <!-- Registration form components -->
-                            <div class="mb-3"><button class="btn btn-primary shadow d-block w-100" type="submit">Sign up</button>
-                            </div>
-                            <p class="text-muted">Already have an account?&nbsp;<a href="{% url 'login' %}">Log in</a></p>
-                        </form>
-                    </div>
+            <form method="post">
+                {% csrf_token %}
+                <div class="mb-3"><label class="form-label" for="username">Username</label><input class="form-control item" type="text" id="username" name="username" placeholder="Username"></div>
+                <div class="mb-3"><label class="form-label" for="email">Email</label><input class="form-control item" type="email" id="email" name="email" placeholder="Email"></div>
+                <div class="mb-3 form-group d-flex">
+                    <input class="form-control mr-3" style="margin-right: 10px" type="text" name="firstname" id="firstname" placeholder="First Name">
+                    <input class="form-control" type="text" name="surname" id="surname" placeholder="Surname">
                 </div>
-            </div>
+                <div class="mb-3"><label class="form-label" for="password1">Password</label><input class="form-control" type="password" id="password1" name="password1" placeholder="Password"></div>
+                <div class="mb-3"><label class="form-label" for="password2">Confirm Password</label><input class="form-control" type="password" id="password2" name="password2" placeholder="Confirm Password"></div>
+                <div class="mb-3">
+                    <button class="btn btn-primary" type="submit">Register</button>
+                </div>
+                <p class="text-muted">Already have an account?&nbsp;<a href="{% url 'login' %}">Log in</a></p>
+            </form>
         </div>
-    </div>
-</section>
+    </section>
+</main>
+
 {% endblock %}
