--- a/Index/templates/index.html
+++ b/Index/templates/index.html
@@ -19,7 +19,7 @@
                                 {% endif %}
                                 <div class="col-lg-7">
                                     <h3>{{ article.title }}</h3>
-                                    <div class="info"><span class="text-muted">Jan 16, 2018 by&nbsp;<a href="#">John Smith</a></span></div>
+                                    <div class="info"><span class="text-muted">{{article.publishedAt}} on&nbsp;<a href="{{ article.source.url }}" target="_blank">{{article.source.name}}</a></span></div>
                                     <p>{{ article.description }}</p>
                                     <a href="{{ article.url }}" class="btn btn-outline-primary btn-sm" target="_blank">Read More</a>
                                 </div>
