--- a/Authentication/templates/base.html
+++ b/Authentication/templates/base.html
@@ -26,6 +26,7 @@
                     {% if user.is_authenticated %}
                     <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Articles</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'myAccount' %}">My Account</a></li>
                     {% endif %}
                 </ul>
             </div>
@@ -36,6 +37,15 @@
             {% endif %}
         </div>
     </nav>
+
+    <!-- Messages dropdown -->
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
 
     <div class="container mt-4">
         {% block content %}
