Requirements.txt & features
- Added a home page
- Made my Account page look better
- Made it so that Articles are now saved into the db
- Added a what are people sayign screen (atm only an expanded view of the front page)
- requirements.txt

--- a/Authentication/templates/base.html
+++ b/Authentication/templates/base.html
@@ -28,8 +28,8 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
-                    <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'index:home' %}">Articles</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'index:home' %}">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'index:index' %}">Articles</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'myAccount' %}">My Account</a></li>
                     {% endif %}
                 </ul>
@@ -60,7 +60,40 @@
 
     <footer class="page-footer dark">
         <div class="container">
-            <!-- Footer content -->
+            <div class="row">
+                <div class="col-sm-3">
+                    <h5>Get started</h5>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Sign up</a></li>
+                        <li><a href="#">Downloads</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <h5>About us</h5>
+                    <ul>
+                        <li><a href="https://www.uwe.ac.uk/about" target="_blank">About UWE</a></li>
+                        <li><a href="https://www.uwe.ac.uk/life/campus-and-facilities/information-points#:~:text=Email%20infopoint%40uwe.ac.,Ask%20a%20question%20through%20infohub." target="_blank">Contact Us</a></li>
+                        <li><a href="#">Reviews</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <h5>Support</h5>
+                    <ul>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Help desk</a></li>
+                        <li><a href="#">Forums</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <h5>Legal</h5>
+                    <ul>
+                        <li><a href="#">Terms of Service</a></li>
+                        <li><a href="#">Terms of Use</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
         <div class="footer-copyright">
             <p>© 2023 Copyright Text</p>
