Recommendation Engine Update
- Added page to create topic creations
- Made it so if user has no prefenreces it forces the user to select some upon login
- Created create topic page for admins

--- a/Authentication/templates/base.html
+++ b/Authentication/templates/base.html
@@ -31,6 +31,9 @@
                     <li class="nav-item"><a class="nav-link" href="{% url 'index:home' %}">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'index:index' %}">Articles</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'myAccount' %}">My Account</a></li>
+                        {% if user.is_superuser %}
+                        <li class="nav-item"><a class="nav-link" href="{% url 'recommendations:create-topic' %}">Create Article Topics</a></li>
+                        {% endif %}
                     {% endif %}
                 </ul>
             </div>
