--- a/Authentication/templates/myAccount.html
+++ b/Authentication/templates/myAccount.html
@@ -41,5 +41,6 @@
             <button class="btn btn-primary" type="submit">Save Changes</button>
             <a class="btn btn-secondary" href="{% url 'index:home' %}">Cancel</a>
         </form>
+        <a class="btn btn-secondary" href="{% url 'recommendations:select_topics' %}">Edit Topic Choices</a>
     </div>
 {% endblock %}
