--- a/Authentication/templates/signup.html
+++ b/Authentication/templates/signup.html
@@ -22,7 +22,7 @@
                 <div class="mb-3">
                     <button class="btn btn-primary" type="submit">Register</button>
                 </div>
-                <p class="text-muted">Already have an account?&nbsp;<a href="{% url 'login' %}">Log in</a></p>
+                <p class="text-muted">Already have an account?&nbsp;<a href="{% url 'authentication:login' %}">Log in</a></p>
             </form>
         </div>
     </section>
