--- a/Authentication/templates/base.html
+++ b/Authentication/templates/base.html
@@ -30,7 +30,7 @@
                     {% if user.is_authenticated %}
                     <li class="nav-item"><a class="nav-link" href="{% url 'index:home' %}">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'index:index' %}">Articles</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'myAccount' %}">My Account</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'authentication:myAccount' %}">My Account</a></li>
                         {% if user.is_superuser %}
                         <li class="nav-item"><a class="nav-link" href="{% url 'recommendations:create-topic' %}">Create Article Topics</a></li>
                         {% endif %}
@@ -38,9 +38,9 @@
                 </ul>
             </div>
             {% if not user.is_authenticated %}
-            <a class="btn btn-primary shadow" role="button" href="{% url 'signup' %}">Register</a>
+            <a class="btn btn-primary shadow" role="button" href="{% url 'authentication:signup' %}">Register</a>
             {% else %}
-            <a class="btn btn-primary shadow" role="button" href="{% url 'logout' %}">Log Out</a>
+            <a class="btn btn-primary shadow" role="button" href="{% url 'authentication:logout' %}">Log Out</a>
             {% endif %}
         </div>
     </nav>
