--- a/Authentication/templates/base.html
+++ b/Authentication/templates/base.html
@@ -32,7 +32,7 @@
                     <li class="nav-item"><a class="nav-link" href="{% url 'index:index' %}">Articles</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'authentication:myAccount' %}">My Account</a></li>
                         {% if user.is_superuser %}
-                        <li class="nav-item"><a class="nav-link" href="{% url 'recommendations:create-topic' %}">Create Article Topics</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'index:staff-page' %}">Admin Page</a></li>
                         {% endif %}
                     {% endif %}
                 </ul>
