--- a/Index/templates/home.html
+++ b/Index/templates/home.html
@@ -2,15 +2,17 @@
 
 {% block title %}NewsReach Home{% endblock %}
 
+{% load static %}
+
 {% block content %}
 <main class="page landing-page">
     <section class="clean-block clean-hero"
-        style="background-image:url(&quot;assets/img/tech/image4.jpg&quot;);color:rgba(9, 162, 255, 0.85);">
+    style="background-image: url('{% static 'assets/img/tech/image4.jpg' %}'); color: rgba(9, 162, 255, 0.85);">
         <div class="text">
             <h1>NewsReach</h1>
             <h2>One place for all your news.</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
-            <button class="btn btn-outline-light btn-lg" type="button">View Articles</button>
+            <p>Get the latest news and stay informed. NewsReach brings you a curated selection of articles from various sources to provide you with a comprehensive news experience.</p>
+            <a href="{% url 'index:index' %}" class="btn btn-outline-light btn-lg">View Articles</a>
         </div>
     </section>
     <section class="clean-block features">
@@ -22,26 +24,22 @@
             <div class="row justify-content-center">
                 <div class="col-md-5 feature-box"><i class="icon-star icon"></i>
                     <h4>Recommendation Engine</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in,
-                        mattis vitae leo.</p>
+                    <p>Discover personalized news recommendations based on your interests and reading habits. Our recommendation engine suggests articles tailored just for you.</p>
                 </div>
                 <div class="col-md-5 feature-box"><i class="icon-emotsmile icon"></i>
                     <h4>Sentiment Analysis</h4>
-                    <p>Analise the general sentiment of an article and filter them depending on what you want to read! Be it happy or sad!</p>
+                    <p>Analyse the sentiment of articles and filter them based on your preference. Whether you want to read positive, negative, or neutral content, NewsReach has got you covered!</p>
                 </div>
                 <div class="col-md-5 feature-box"><i class="icon-screen-smartphone icon"></i>
-                    <h4>Responsive</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in,
-                        mattis vitae leo.</p>
+                    <h4>Responsive Design</h4>
+                    <p>Enjoy a seamless browsing experience on any device. NewsReach is designed to be responsive and adapt to different screen sizes, ensuring optimal readability and usability.</p>
                 </div>
                 <div class="col-md-5 feature-box"><i class="icon-refresh icon"></i>
                     <h4>All Browser Compatibility</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in,
-                        mattis vitae leo.</p>
+                    <p>Access NewsReach from your preferred web browser. Our platform is compatible with all major browsers, allowing you to stay connected to the latest news no matter your choice.</p>
                 </div>
             </div>
         </div>
     </section>
 </main>
-
 {% endblock %}
