--- a/Authentication/templates/base.html
+++ b/Authentication/templates/base.html
@@ -31,6 +31,7 @@
                     {% if user.is_authenticated %}
                     <li class="nav-item"><a class="nav-link" href="{% url 'index:home' %}">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'index:index' %}">Articles</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'index:saved-articles' %}">Saved Articles</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'authentication:myAccount' %}">My Account</a></li>
                         {% if user.is_superuser %}
                         <li class="nav-item"><a class="nav-link" href="{% url 'index:staff-page' %}">Admin Page</a></li>
