--- a/Index/templates/index.html
+++ b/Index/templates/index.html
@@ -12,6 +12,15 @@
                 <p>Or you can search for something else below.</p>
             </div>
 
+            {% if messages %}
+            <div class="alert alert-info alert-dismissible fade show" role="alert">
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                {% for message in messages %}
+                    {{ message }}
+                {% endfor %}
+            </div>
+            {% endif %}
+
             <div class="search-bar mb-4">
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" name="q" placeholder="Search" aria-label="Search">
